--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "watch:css": "postcss --watch tailwindcss/style.css -o src/assets/css/style.css",
     "start": "react-scripts start",
-    "build": "node -r dotenv/config ./node_modules/.bin/react-scripts build dotenv_config_path=.env.prod",
+    "build": "set \"CI=false\" && node -r dotenv/config ./node_modules/.bin/react-scripts build dotenv_config_path=.env.prod",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
