--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,7 @@
 PORT=3030
 REACT_APP_BASE_URL = https://class-batuahbimbel.netlify.app
 REACT_APP_FRONTPAGE_URL = http://batuahbimbel.vercel.app
-REACT_APP_API_HOST = http://btsbim.site
+REACT_APP_API_HOST = https://btsbim.site/
 
 # REACT_APP_API_HOST = http://btsbim.site
 # VITE_API_PORT = 3030
